syntax = "proto3";
import "protobuf-net/bcl.proto"; // schema for protobuf-net's handling of core .NET types

message Adresse {
   string Postleitzahl = 3;
   string Ort = 4;
   string Strasse = 5;
   string Hausnummer = 6;
   string Postfach = 7;
   string Adresszusatz = 8;
   string CoErgaenzung = 9;
   Landescode Landescode = 10;
}
enum Anrede {
   HERR = 0;
   FRAU = 1;
   EHELEUTE = 2;
   FIRMA = 3;
   INDIVIDUELL = 4;
   DR = 5;
}
enum BDEWArtikelnummer {
   LEISTUNG = 0;
   LEISTUNG_PAUSCHAL = 1;
   GRUNDPREIS = 2;
   REGELENERGIE_ARBEIT = 3;
   REGELENERGIE_LEISTUNG = 4;
   NOTSTROMLIEFERUNG_ARBEIT = 5;
   NOTSTROMLIEFERUNG_LEISTUNG = 6;
   RESERVENETZKAPAZITAET = 7;
   RESERVELEISTUNG = 8;
   ZUSAETZLICHE_ABLESUNG = 9;
   PRUEFGEBUEHREN_AUSSERPLANMAESSIG = 10;
   WIRKARBEIT = 11;
   SINGULAER_GENUTZTE_BETRIEBSMITTEL = 12;
   ABGABE_KWKG = 13;
   ABSCHLAG = 14;
   KONZESSIONSABGABE = 15;
   ENTGELT_FERNAUSLESUNG = 16;
   UNTERMESSUNG = 17;
   BLINDMEHRARBEIT = 18;
   ENTGELT_ABRECHNUNG = 19;
   SPERRKOSTEN = 20;
   ENTSPERRKOSTEN = 21;
   MAHNKOSTEN = 22;
   MEHR_MINDERMENGEN = 23;
   INKASSOKOSTEN = 24;
   BLINDMEHRLEISTUNG = 25;
   ENTGELT_MESSUNG_ABLESUNG = 26;
   ENTGELT_EINBAU_BETRIEB_WARTUNG_MESSTECHNIK = 27;
   AUSGLEICHSENERGIE = 28;
   ZAEHLEINRICHTUNG = 29;
   WANDLER_MENGENUMWERTER = 30;
   KOMMUNIKATIONSEINRICHTUNG = 31;
   TECHNISCHE_STEUEREINRICHTUNG = 32;
   PARAGRAF_19_STROM_NEV_UMLAGE = 33;
   BEFESTIGUNGSEINRICHTUNG = 34;
   OFFSHORE_HAFTUNGSUMLAGE = 35;
   FIXE_ARBEITSENTGELTKOMPONENTE = 36;
   FIXE_LEISTUNGSENTGELTKOMPONENTE = 37;
   UMLAGE_ABSCHALTBARE_LASTEN = 38;
   MEHRMENGE = 39;
   MINDERMENGE = 40;
   ENERGIESTEUER = 41;
   SMARTMETER_GATEWAY = 42;
   STEUERBOX = 43;
   MSB_INKL_MESSUNG = 44;
}
message Betrag {
   .bcl.Decimal Wert = 3;
   Waehrungscode Waehrung = 4;
}
message Geschaeftspartner {
   Anrede Anrede = 4;
   string Name1 = 6;
   string Name2 = 7;
   string Name3 = 8;
   bool Gewerbekennzeichnung = 9;
   string Hrnummer = 10;
   string Amtsgericht = 11;
   repeated Kontaktart Kontaktweg = 12 [packed = false];
   string UmsatzsteuerId = 13;
   string GlaeubigerId = 14;
   string EMailAdresse = 15;
   string Website = 16;
   repeated Geschaeftspartnerrolle Geschaeftspartnerrolle = 17 [packed = false];
   Adresse Partneradresse = 18;
   string Title = 1001;
}
enum Geschaeftspartnerrolle {
   LIEFERANT = 0;
   DIENSTLEISTER = 1;
   KUNDE = 2;
   INTERESSENT = 3;
   MARKTPARTNER = 4;
}
enum Kontaktart {
   ANSCHREIBEN = 0;
   TELEFONAT = 1;
   FAX = 2;
   E_MAIL = 3;
   SMS = 4;
}
enum Landescode {
   AC = 0;
   AD = 1;
   AE = 2;
   AF = 3;
   AG = 4;
   AI = 5;
   AL = 6;
   AM = 7;
   AN = 8;
   AO = 9;
   AQ = 10;
   AR = 11;
   AS = 12;
   AT = 13;
   AU = 14;
   AW = 15;
   AX = 16;
   AZ = 17;
   BA = 18;
   BB = 19;
   BD = 20;
   BE = 21;
   BF = 22;
   BG = 23;
   BH = 24;
   BI = 25;
   BJ = 26;
   BL = 27;
   BM = 28;
   BN = 29;
   BO = 30;
   BQ = 31;
   BR = 32;
   BS = 33;
   BT = 34;
   BU = 35;
   BV = 36;
   BW = 37;
   BY = 38;
   BZ = 39;
   CA = 40;
   CC = 41;
   CD = 42;
   CF = 43;
   CG = 44;
   CH = 45;
   CI = 46;
   CK = 47;
   CL = 48;
   CM = 49;
   CN = 50;
   CO = 51;
   CP = 52;
   CR = 53;
   CS = 54;
   CU = 55;
   CV = 56;
   CW = 57;
   CX = 58;
   CY = 59;
   CZ = 60;
   DE = 61;
   DG = 62;
   DJ = 63;
   DK = 64;
   DM = 65;
   DO = 66;
   DZ = 67;
   EA = 68;
   EC = 69;
   EE = 70;
   EG = 71;
   EH = 72;
   ER = 73;
   ES = 74;
   ET = 75;
   EU = 76;
   FI = 77;
   FJ = 78;
   FK = 79;
   FM = 80;
   FO = 81;
   FR = 82;
   FX = 83;
   GA = 84;
   GB = 85;
   GD = 86;
   GE = 87;
   GF = 88;
   GG = 89;
   GH = 90;
   GI = 91;
   GL = 92;
   GM = 93;
   GN = 94;
   GP = 95;
   GQ = 96;
   GR = 97;
   GS = 98;
   GT = 99;
   GU = 100;
   GW = 101;
   GY = 102;
   HK = 103;
   HM = 104;
   HN = 105;
   HR = 106;
   HT = 107;
   HU = 108;
   IC = 109;
   ID = 110;
   IE = 111;
   IL = 112;
   IM = 113;
   IN = 114;
   IO = 115;
   IQ = 116;
   IR = 117;
   IS = 118;
   IT = 119;
   JE = 120;
   JM = 121;
   JO = 122;
   JP = 123;
   KE = 124;
   KG = 125;
   KH = 126;
   KI = 127;
   KM = 128;
   KN = 129;
   KP = 130;
   KR = 131;
   KW = 132;
   KY = 133;
   KZ = 134;
   LA = 135;
   LB = 136;
   LC = 137;
   LI = 138;
   LK = 139;
   LR = 140;
   LS = 141;
   LT = 142;
   LU = 143;
   LV = 144;
   LY = 145;
   MA = 146;
   MC = 147;
   MD = 148;
   ME = 149;
   MF = 150;
   MG = 151;
   MH = 152;
   MK = 153;
   ML = 154;
   MM = 155;
   MN = 156;
   MO = 157;
   MP = 158;
   MQ = 159;
   MR = 160;
   MS = 161;
   MT = 162;
   MU = 163;
   MV = 164;
   MW = 165;
   MX = 166;
   MY = 167;
   MZ = 168;
   NA = 169;
   NC = 170;
   NE = 171;
   NF = 172;
   NG = 173;
   NI = 174;
   NL = 175;
   NO = 176;
   NP = 177;
   NR = 178;
   NT = 179;
   NU = 180;
   NZ = 181;
   OM = 182;
   PA = 183;
   PE = 184;
   PF = 185;
   PG = 186;
   PH = 187;
   PK = 188;
   PL = 189;
   PM = 190;
   PN = 191;
   PR = 192;
   PS = 193;
   PT = 194;
   PW = 195;
   PY = 196;
   QA = 197;
   RE = 198;
   RO = 199;
   RS = 200;
   RU = 201;
   RW = 202;
   SA = 203;
   SB = 204;
   SC = 205;
   SD = 206;
   SE = 207;
   SF = 208;
   SG = 209;
   SH = 210;
   SI = 211;
   SJ = 212;
   SK = 213;
   SL = 214;
   SM = 215;
   SN = 216;
   SO = 217;
   SR = 218;
   SS = 219;
   ST = 220;
   SU = 221;
   SV = 222;
   SX = 223;
   SY = 224;
   SZ = 225;
   TA = 226;
   TC = 227;
   TD = 228;
   TF = 229;
   TG = 230;
   TJ = 231;
   TK = 232;
   TL = 233;
   TM = 234;
   TN = 235;
   TO = 236;
   TP = 237;
   TR = 238;
   TT = 239;
   TV = 240;
   TW = 241;
   TZ = 242;
   UA = 243;
   UG = 244;
   UK = 245;
   UM = 246;
   US = 247;
   UY = 248;
   UZ = 249;
   VA = 250;
   VC = 251;
   VE = 252;
   VG = 253;
   VI = 254;
   VN = 255;
   VU = 256;
   WF = 257;
   WS = 258;
   XK = 259;
   YE = 260;
   YT = 261;
   YU = 262;
   ZA = 263;
   ZM = 264;
   ZR = 265;
   ZW = 266;
}
message Menge {
   .bcl.Decimal Wert = 3;
   Mengeneinheit Einheit = 4;
}
enum Mengeneinheit {
   ZERO = 0; // proto3 requires a zero value as the first item (it can be named anything)
   WH = 2;
   KW = 3;
   KWH = 2000;
   MW = 3000;
   MWH = 2000000;
   ANZAHL = 7;
   KUBIKMETER = 11;
   STUNDE = 13;
   TAG = 17;
   MONAT = 19;
   JAHR = 228;
   VAR = 23;
   KVAR = 23000;
   VARH = 29;
   KVARH = 29000;
}
message Preis {
   .bcl.Decimal Wert = 3;
   Waehrungseinheit Einheit = 4;
   Mengeneinheit Bezugswert = 5;
   Preisstatus Status = 6;
}
enum Preisstatus {
   VORLAEUFIG = 0;
   ENDGUELTIG = 1;
}
message Rechnung {
   string Rechnungstitel = 4;
   Rechnungsstatus Rechnungsstatus = 5;
   bool Storno = 6;
   string Rechnungsnummer = 7;
   .bcl.DateTime Rechnungsdatum = 8;
   .bcl.DateTime Faelligkeitsdatum = 9;
   Rechnungstyp Rechnungsstyp = 10;
   string OriginalRechnungsnummer = 11;
   Zeitraum Rechnungsperiode = 12;
   Geschaeftspartner Rechnungsersteller = 13;
   Geschaeftspartner Rechnungsempfaenger = 14;
   Betrag Gesamtnetto = 15;
   Betrag Gesamtsteuer = 16;
   Betrag Gesamtbrutto = 17;
   Betrag Vorausgezahlt = 18;
   Betrag rabattBrutto = 19;
   Betrag Zuzahlen = 20;
   repeated Steuerbetrag Steuerbetraege = 21;
   repeated Rechnungsposition Rechnungspositionen = 22;
}
message Rechnungsposition {
   int32 Positionsnummer = 3;
   .bcl.DateTime LieferungVon = 4;
   .bcl.DateTime LieferungBis = 5;
   string Positionstext = 6;
   Mengeneinheit Zeiteinheit = 7;
   BDEWArtikelnummer Artikelnummer = 8;
   string LokationsId = 9;
   Menge PositionsMenge = 10;
   Menge ZeitbezogeneMenge = 11;
   Preis Einzelpreis = 12;
   Betrag TeilsummeNetto = 13;
   Betrag TeilrabattNetto = 14;
   Steuerbetrag TeilsummeSteuer = 15;
   string VertragskontoId = 16;
   string VertragsId = 1017;
   RechnungspositionsStatus Status = 1018;
}
enum RechnungspositionsStatus {
   ROH = 0;
   ROH_AUSGENOMMEN = 1;
   ABRECHENBAR = 2;
   ABRECHENBAR_AUSGENOMMEN = 3;
   ABGERECHNET = 4;
}
enum Rechnungsstatus {
   GEPRUEFT_OK = 0;
   GEPRUEFT_FEHLERHAFT = 1;
   GEBUCHT = 2;
   BEZAHLT = 3;
}
enum Rechnungstyp {
   ABSCHLAGSRECHNUNG = 0;
   TURNUSRECHNUNG = 1;
   MONATSRECHNUNG = 2;
   WIMRECHNUNG = 3;
   ZWISCHENRECHNUNG = 4;
   INTEGRIERTE_13TE_RECHNUNG = 5;
   ZUSAETZLICHE_13TE_RECHNUNG = 6;
   MEHRMINDERMENGENRECHNUNG = 7;
}
message Steuerbetrag {
   Steuerkennzeichen Steuerkennzeichen = 3;
   .bcl.Decimal Basiswert = 4;
   .bcl.Decimal Steuerwert = 5;
   Waehrungscode Waehrung = 6;
}
enum Steuerkennzeichen {
   UST_19 = 0;
   UST_7 = 1;
   VST_0 = 2;
   VST_19 = 3;
   VST_7 = 4;
   RCV = 5;
}
enum Waehrungscode {
   AFN = 0;
   ALL = 1;
   AMD = 2;
   ANG = 3;
   AOA = 4;
   ARS = 5;
   AUD = 6;
   AWG = 7;
   AZN = 8;
   BAM = 9;
   BBD = 10;
   BDT = 11;
   BGN = 12;
   BHD = 13;
   BIF = 14;
   BMD = 15;
   BND = 16;
   BOB = 17;
   BOV = 18;
   BRL = 19;
   BSD = 20;
   BTN = 21;
   BWP = 22;
   BYN = 23;
   BYR = 24;
   BZD = 25;
   CAD = 26;
   CDF = 27;
   CHE = 28;
   CHF = 29;
   CHW = 30;
   CLF = 31;
   CLP = 32;
   CNY = 33;
   COP = 34;
   COU = 35;
   CRC = 36;
   CUC = 37;
   CUP = 38;
   CVE = 39;
   CZK = 40;
   DJF = 41;
   DKK = 42;
   DOP = 43;
   DZD = 44;
   EGP = 45;
   ERN = 46;
   ETB = 47;
   EUR = 48;
   FJD = 49;
   FKP = 50;
   GBP = 51;
   GEL = 52;
   GHS = 53;
   GIP = 54;
   GMD = 55;
   GNF = 56;
   GTQ = 57;
   GYD = 58;
   HKD = 59;
   HNL = 60;
   HRK = 61;
   HTG = 62;
   HUF = 63;
   IDR = 64;
   ILS = 65;
   INR = 66;
   IQD = 67;
   IRR = 68;
   ISK = 69;
   JMD = 70;
   JOD = 71;
   JPY = 72;
   KES = 73;
   KGS = 74;
   KHR = 75;
   KMF = 76;
   KPW = 77;
   KRW = 78;
   KWD = 79;
   KYD = 80;
   KZT = 81;
   LAK = 82;
   LBP = 83;
   LKR = 84;
   LRD = 85;
   LSL = 86;
   LTL = 87;
   LYD = 88;
   MAD = 89;
   MDL = 90;
   MGA = 91;
   MKD = 92;
   MMK = 93;
   MNT = 94;
   MOP = 95;
   MRO = 96;
   MUR = 97;
   MVR = 98;
   MWK = 99;
   MXN = 100;
   MXV = 101;
   MYR = 102;
   MZN = 103;
   NAD = 104;
   NGN = 105;
   NIO = 106;
   NOK = 107;
   NPR = 108;
   NZD = 109;
   OMR = 110;
   PAB = 111;
   PEN = 112;
   PGK = 113;
   PHP = 114;
   PKR = 115;
   PLN = 116;
   PYG = 117;
   QAR = 118;
   RON = 119;
   RSD = 120;
   RUB = 121;
   RUR = 122;
   RWF = 123;
   SAR = 124;
   SBD = 125;
   SCR = 126;
   SDG = 127;
   SEK = 128;
   SGD = 129;
   SHP = 130;
   SLL = 131;
   SOS = 132;
   SRD = 133;
   SSP = 134;
   STD = 135;
   SVC = 136;
   SYP = 137;
   SZL = 138;
   THB = 139;
   TJS = 140;
   TMT = 141;
   TND = 142;
   TOP = 143;
   TRY = 144;
   TTD = 145;
   TWD = 146;
   TZS = 147;
   UAH = 148;
   UGX = 149;
   USD = 150;
   USN = 151;
   USS = 152;
   UYI = 153;
   UYU = 154;
   UZS = 155;
   VEF = 156;
   VND = 157;
   VUV = 158;
   WST = 159;
   XAF = 160;
   XAG = 161;
   XAU = 162;
   XBA = 163;
   XBB = 164;
   XBC = 165;
   XBD = 166;
   XCD = 167;
   XDR = 168;
   XOF = 169;
   XPD = 170;
   XPF = 171;
   XPT = 172;
   XSU = 173;
   XTS = 174;
   XUA = 175;
   XXX = 176;
   YER = 177;
   ZAR = 178;
   ZMW = 179;
   ZWL = 180;
}
enum Waehrungseinheit {
   EUR = 0;
   CT = 1;
}
enum Zeiteinheit {
   SEKUNDE = 0;
   MINUTE = 1;
   STUNDE = 2;
   VIERTEL_STUNDE = 3;
   TAG = 4;
   WOCHE = 5;
   MONAT = 6;
   QUARTAL = 7;
   HALBJAHR = 8;
   JAHR = 9;
}
message Zeitraum {
   Zeiteinheit Einheit = 3;
   .bcl.Decimal Dauer = 4;
   .bcl.DateTime Startdatum = 5;
   .bcl.DateTime Enddatum = 6;
}
